# books_recommendation

./: .gitignore  README.md  books_summaries.ipynb  doc2vec_model.py  pyproject.toml  similarity_model.py  tfidf_model.py  transformer_model.py
app/: Find_New_Books.py
app/pages/: Check_Our_Collection.py
data/: reviews.csv
notebooks/: books_summaries_eda.ipynb  collaborative.ipynb  reviews_data.ipynb  training_models.ipynb
scripts/: collaborative_model.py  doc2vec_model.py  merge_rankings.py  similarity_model.py  tfidf_model.py  transformer_model.py
