[tool.poetry]
name = "books-recommendation"
version = "0.1.0"
description = "System for books recommendation based on the descriptions and users reviews."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
