[tool.poetry]
name = "books-recommendation"
version = "0.1.0"
description = "System for books recommendation based on the descriptions and users reviews."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.3"
matplotlib = "^3.8.1"
nltk = "^3.8.1"
scikit-learn = "^1.3.2"
gensim = "^4.3.2"
sentence-transformers = "^2.2.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
